[ADD] -> Responsive & background image, V1 should be done, now

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-navbar></app-navbar>
-<div class="bg-[url('https://image.api.playstation.com/vulcan/ap/rnd/202402/2113/1b4d0702411a5cb205fd27d20e999e27b5e6cad9c02f4530.jpg?w=1920&thumb=false')] bg-center bg-size- bg-no-repeat">
-  <router-outlet />
+<div class="relative overflow-y-auto">
+  <br>
+  <div class="fixed inset-0 bg-[url('https://i.imgur.com/jlCiXFh.jpeg')] bg-center bg-no-repeat bg-cover blur-xs">
+  </div>
+  <div class="relative">
+    <router-outlet />
+  </div>
 </div>
