--- a/front-end/src/app/components/navbar/navbar.component.html
+++ b/front-end/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="relative z-50">
     <mat-toolbar class="flex items-center justify-center md:justify-start">
         <a routerLink="/characters" class="mr-2 md:mr-4">
             <img src="dblogo.png" alt='Icone DB' class="size-16 justify-center">
@@ -8,5 +8,3 @@
         </a>
     </mat-toolbar>
 </header>
-
-<router-outlet />
