--- a/front-end/src/app/pages/character/character.component.html
+++ b/front-end/src/app/pages/character/character.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">{{character?.name}}</h1>
+<h1 class="text-center text-4xl">{{character?.name}}</h1>
 <div class="flex flex-col md:flex-row justify-center">
     <img src="{{character?.splashArtUrl}}" alt="{{character?.name}} splash art" class="w-3xs md:w-2xs">
     <div class="content-center">
