--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
-<h1>Personnages</h1>
-<ul>
+<h1 class="text-center text-3xl">Personnages</h1>
+<br>
+<ul class="flex flex-wrap justify-center">
     <li *ngFor="let character of characters">
-        <a [routerLink]="['/characters', character.reference]" class="object-contain">
-            <img src="{{character.thumbnail}}" alt="{{character.name}} image">
+        <a [routerLink]="['/characters', character.reference]">
+            <img src="{{character.thumbnail}}" alt="{{character.name}} image" class="w-36">
         </a>
-        <a [routerLink]="['/characters', character.reference]">{{character.name}}</a>
     </li>
 </ul>
