--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <ul class="flex flex-wrap justify-center">
     <li *ngFor="let character of characters">
         <a [routerLink]="['/characters', character.reference]">
-            <img src="{{character.thumbnail}}" alt="{{character.name}} image" class="w-36">
+            <img src="{{character.thumbnail}}" alt="{{character.name}} image" class="w-36 hover:w-40">
         </a>
     </li>
 </ul>
